<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrationActivity"
    android:background="@drawable/register">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/hotpot"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_registration"
            android:textSize="50dp"
            android:layout_gravity="bottom|center_horizontal"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:paddingBottom="5dp"
            android:shadowRadius="10"
            android:shadowColor="@color/white" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/lab_firstname"
            android:textColor="@color/black"
            android:textSize="25dp"/>

        <EditText
            android:id="@+id/txt_firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:layout_marginLeft="5dp"
            android:inputType="textPersonName"
            android:text="FirstName"
            android:textColor="@color/grey"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/lab_lastname"
            android:textColor="@color/black"
            android:textSize="25dp"/>

        <EditText
            android:id="@+id/txt_lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:layout_marginLeft="5dp"
            android:inputType="textPersonName"
            android:text="@string/lab_lastname"
            android:textColor="@color/grey"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/phone"
            android:textColor="@color/black"
            android:textSize="25dp"/>

        <EditText
            android:id="@+id/txt_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:layout_marginLeft="5dp"
            android:inputType="phone"
            android:text="@string/default_phone"
            android:textColor="@color/grey"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/lab_address"
            android:textColor="@color/black"
            android:textSize="25dp"/>

        <EditText
            android:id="@+id/txt_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:layout_marginLeft="5dp"
            android:inputType="textPostalAddress"
            android:text="@string/default_address"
            android:textColor="@color/grey"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/lab_email"
            android:textColor="@color/black"
            android:textSize="25dp"/>

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:layout_marginLeft="5dp"
            android:inputType="textEmailAddress"
            android:text="@string/default_email"
            android:textColor="@color/grey"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/lab_password"
            android:textColor="@color/black"
            android:textSize="25dp"/>

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:layout_marginLeft="5dp"
            android:inputType="textPassword"
            android:text="@string/txt_password"
            android:textColor="@color/grey"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:paddingTop="5dp">

    <Button
    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:text="@string/txt_confirm"
        android:layout_marginRight="25dp"
    android:textSize="15dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/txt_cancel"
            android:layout_marginLeft="25dp"
            android:textSize="15dp"/>

    </LinearLayout>

</LinearLayout>